--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy": "^1.1.0",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slugify": "^2.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
